--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" oncontextmenu="return false">
 <head>
   <!-- Meta Tags -->
   <meta charset="UTF-8">
@@ -23,7 +23,7 @@
 </head>
 
 
-<body class="main-content">
+<body class="main-content" oncontextmenu="return false" onkeydown="return false" onmousedown="return false">
   <div id="main-content">
    <header class="section sec1 header active" id="home">
     <div class="header-content">
@@ -144,7 +144,7 @@
             <div class="progress-bar">
               <p class="prog-title">REACT</p>
               <div class="progress-con">
-                <p class="prog-text">65%</p>
+                <p class="prog-text">70%</p>
                 <div class="progress">
                   <span class="react"></span>
                 </div>
@@ -155,7 +155,7 @@
               <div class="progress-con">
                 <p class="prog-text">90%</p>
                 <div class="progress">
-                  <span class="figma"></span>
+                  <span class="ui-ux"></span>
                 </div>
               </div>
             </div>
@@ -298,7 +298,7 @@
           <div class="hover-items"> 
             <h3>View Project</h3>
             <div class="icons">
-              <a href="https://github.com/Emm-Anuel100/Goo-app.git" class="icon" target="_blank" rel="noopener" title="Github">
+              <a href="https://github.com/Emm-Anuel100/Goo-web-app.git" class="icon" target="_blank" rel="noopener" title="Github">
                 <i class="fab fa-github"></i>
               </a>
               <a href="#" class="icon" target="_blank" rel="noopener" title="Web">
@@ -574,13 +574,13 @@ import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebas
 
 // Firebase configuration
 const firebaseConfig = {
-  apiKey: "AIzaSyByqZHmMRwSXwLkqFhY4X30B_tUL4pr1Og",
-  authDomain: "portfolio-feedback-66d91.firebaseapp.com",
-  databaseURL: "https://portfolio-feedback-66d91-default-rtdb.firebaseio.com",
-  projectId: "portfolio-feedback-66d91",
-  storageBucket: "portfolio-feedback-66d91.appspot.com",
-  messagingSenderId: "20961848271",
-  appId: "1:20961848271:web:1db77e6eb5705d82cac0ba"
+  apiKey: "AIza################################",
+  authDomain: "portfoli##################",
+  databaseURL: "htt############olio-f#######################",
+  projectId: "por###############back-66d91",
+  storageBucket: "portfol##################",
+  messagingSenderId: "###############71",
+  appId: "1:20#####################c0ba"
 };
 
 // Initialize Firebase Config
